Change header to 8806 Payment Tracker

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 
         .vendor-card {
             background: #f8f9fa;
-            padding: 16px;
+            padding: 14px;
             border-radius: 10px;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             border-left: 4px solid #667eea;
         }
 
@@ -173,13 +173,13 @@
             display: flex;
             justify-content: space-between;
             align-items: start;
-            margin-bottom: 14px;
+            margin-bottom: 12px;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 8px;
         }
 
         .vendor-name {
-            font-size: 18px;
+            font-size: 15px;
             font-weight: bold;
             color: #333;
             line-height: 1.3;
@@ -225,8 +225,8 @@
         }
 
         .payment-history {
-            margin-top: 14px;
-            padding-top: 14px;
+            margin-top: 12px;
+            padding-top: 12px;
             border-top: 1px solid #e0e0e0;
         }
 
@@ -243,18 +243,18 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 12px;
+            padding: 10px;
             background: white;
             border-radius: 8px;
-            margin-bottom: 8px;
-            font-size: 14px;
+            margin-bottom: 7px;
+            font-size: 12px;
         }
 
         .payment-amount {
             font-weight: 600;
             color: #38ef7d;
             margin-right: 8px;
-            font-size: 15px;
+            font-size: 13px;
         }
 
         .payment-date {
@@ -270,23 +270,23 @@
         }
 
         .stat-box {
-            padding: 12px;
+            padding: 10px;
             background: white;
             border-radius: 8px;
             border: 1px solid #e0e0e0;
         }
 
         .stat-label {
-            font-size: 11px;
+            font-size: 9px;
             color: #888;
-            margin-bottom: 4px;
+            margin-bottom: 3px;
             text-transform: uppercase;
             letter-spacing: 0.3px;
             font-weight: 600;
         }
 
         .stat-value {
-            font-size: 20px;
+            font-size: 17px;
             font-weight: bold;
             color: #333;
         }
@@ -302,8 +302,8 @@
         .payment-form {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            margin-top: 14px;
+            gap: 8px;
+            margin-top: 12px;
         }
 
         .payment-form input,
@@ -313,23 +313,23 @@
 
         .delete-btn {
             background: linear-gradient(135deg, #f5576c 0%, #f093fb 100%);
-            padding: 12px 18px;
-            font-size: 14px;
-            min-height: 44px;
+            padding: 10px 15px;
+            font-size: 12px;
+            min-height: 37px;
         }
 
         .edit-btn {
             background: linear-gradient(135deg, #ffa726 0%, #fb8c00 100%);
-            padding: 12px 18px;
-            font-size: 14px;
-            min-height: 44px;
+            padding: 10px 15px;
+            font-size: 12px;
+            min-height: 37px;
             margin-right: 8px;
         }
 
         .add-payment-btn {
-            padding: 14px 20px;
-            font-size: 15px;
-            min-height: 50px;
+            padding: 12px 17px;
+            font-size: 13px;
+            min-height: 42px;
         }
 
         .edit-mode {
@@ -352,17 +352,17 @@
 
         .save-btn {
             background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
-            padding: 14px 18px;
-            font-size: 15px;
-            min-height: 50px;
+            padding: 12px 15px;
+            font-size: 13px;
+            min-height: 42px;
             flex: 1;
         }
 
         .cancel-btn {
             background: linear-gradient(135deg, #757575 0%, #9e9e9e 100%);
-            padding: 14px 18px;
-            font-size: 15px;
-            min-height: 50px;
+            padding: 12px 15px;
+            font-size: 13px;
+            min-height: 42px;
             flex: 1;
         }
 
@@ -527,7 +527,7 @@
     <div class="container">
         <div class="header">
             <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 8px; gap: 8px;">
-                <h1 style="margin: 0; flex: 1;">🏗️ 8806 Construction Payment Tracker</h1>
+                <h1 style="margin: 0; flex: 1;">8806 Payment Tracker</h1>
                 <button onclick="showRestoreModal()" style="background: linear-gradient(135deg, #ffa726 0%, #fb8c00 100%); padding: 8px 12px; font-size: 12px; min-height: 36px; white-space: nowrap;">
                     ⏮️ Restore
                 </button>
