refactor: Move to Vercel serverless backend with secure env variables
- Create Vercel API routes in /api folder (vendors.js, vendors_id.js, vendors_payment.js)
- Remove local server.js and JSON credential file (security)
- Move all secrets to environment variables (.env.example)
- Update frontend to use relative API paths (/api instead of localhost:3000)
- Add comprehensive Vercel deployment guide to README
- Update package.json and .gitignore for production
- Add vercel.json configuration

The app is now ready to deploy to Vercel and work from any device/browser.

--- a/index.html
+++ b/index.html
@@ -613,104 +613,37 @@
     <script>
         let vendors = [];
         let backups = [];
+        const API_URL = '/api';
 
-        // Load data from localStorage on page load
+        // Load data from Google Sheets on page load
         window.onload = function() {
-            // Load backups
+            // Load backups from localStorage
             const savedBackups = localStorage.getItem('constructionBackups');
             if (savedBackups) {
-                backups = JSON.parse(savedBackups);
+                try {
+                    backups = JSON.parse(savedBackups);
+                } catch (e) {
+                    backups = [];
+                }
             }
 
-            // Clear old data and start fresh with new vendor list
-            vendors = [
-                {
-                    id: Date.now() + 1,
-                    name: 'Windows Material',
-                    workType: 'Material Only',
-                    agreedAmount: 5918.00,
-                    paidAmount: 0,
-                    payments: []
-                },
-                {
-                    id: Date.now() + 2,
-                    name: 'Honey Bucket',
-                    workType: 'Material Only',
-                    agreedAmount: 192.85,
-                    paidAmount: 192.85,
-                    payments: [{ amount: 192.85, date: new Date().toISOString(), method: 'Credit Card' }]
-                },
-                {
-                    id: Date.now() + 3,
-                    name: 'Henry Framer',
-                    workType: 'Labor Only',
-                    agreedAmount: 27300.00,
-                    paidAmount: 4000.00,
-                    payments: [{ amount: 4000.00, date: new Date().toISOString(), method: 'Zelle' }]
-                },
-                {
-                    id: Date.now() + 4,
-                    name: 'Builders First Resource',
-                    workType: 'Material Only',
-                    agreedAmount: 50856.14,
-                    paidAmount: 29272.08,
-                    payments: [
-                        { amount: 19798.00, date: new Date().toISOString(), method: 'Credit Card' },
-                        { amount: 9474.08, date: new Date().toISOString(), method: 'Credit Card' }
-                    ]
-                },
-                {
-                    id: Date.now() + 5,
-                    name: 'American Trusses',
-                    workType: 'Material Only',
-                    agreedAmount: 9705.00,
-                    paidAmount: 9705.00,
-                    payments: [{ amount: 9705.00, date: new Date().toISOString(), method: 'Credit Card' }]
-                },
-                {
-                    id: Date.now() + 6,
-                    name: 'Labor Lunch Foundation',
-                    workType: 'Labor & Material',
-                    agreedAmount: 110.00,
-                    paidAmount: 110.00,
-                    payments: [{ amount: 110.00, date: new Date().toISOString(), method: 'Credit Card' }]
-                },
-                {
-                    id: Date.now() + 7,
-                    name: 'Habib Engineer Inspection',
-                    workType: 'Labor Only',
-                    agreedAmount: 300.00,
-                    paidAmount: 300.00,
-                    payments: [{ amount: 300.00, date: new Date().toISOString(), method: 'Zelle' }]
-                },
-                {
-                    id: Date.now() + 8,
-                    name: 'Waseem/Rene Plumber',
-                    workType: 'Labor Only',
-                    agreedAmount: 4000.00,
-                    paidAmount: 4000.00,
-                    payments: [{ amount: 4000.00, date: new Date().toISOString(), method: 'Zelle' }]
-                },
-                {
-                    id: Date.now() + 9,
-                    name: 'Alfa Foundation',
-                    workType: 'Labor & Material',
-                    agreedAmount: 33500.00,
-                    paidAmount: 33500.00,
-                    payments: [
-                        { amount: 20000.00, date: new Date().toISOString(), method: 'Cash' },
-                        { amount: 13500.00, date: new Date().toISOString(), method: 'Zelle' }
-                    ]
-                }
-            ];
-            saveData();
-            renderVendors();
-            updateSummary();
-            createDailyBackup();
+            // Fetch vendors from Google Sheets via backend API
+            fetchVendors();
         };
 
-        function saveData() {
-            localStorage.setItem('constructionVendors', JSON.stringify(vendors));
+        // Fetch vendors from backend (connected to Google Sheets)
+        async function fetchVendors() {
+            try {
+                const response = await fetch(`${API_URL}/vendors`);
+                if (!response.ok) throw new Error('Failed to fetch vendors');
+                vendors = await response.json();
+                renderVendors();
+                updateSummary();
+                createDailyBackup();
+            } catch (error) {
+                console.error('Error fetching vendors:', error);
+                alert('⚠️ Could not connect to backend server.\n\nMake sure to run:\nnpm install\nnpm start');
+            }
         }
 
         function createDailyBackup() {
@@ -811,25 +744,31 @@
                 return;
             }
 
-            const vendor = {
-                id: Date.now(),
-                name: name,
-                workType: workType,
-                agreedAmount: agreedAmount,
-                paidAmount: initialPayment,
-                payments: initialPayment > 0 ? [{ amount: initialPayment, date: new Date().toISOString(), method: paymentMethod }] : []
-            };
-
-            vendors.push(vendor);
-            saveData();
-            createDailyBackup();
-            renderVendors();
-            updateSummary();
-
-            // Clear form
-            document.getElementById('vendorName').value = '';
-            document.getElementById('agreedAmount').value = '';
-            document.getElementById('initialPayment').value = '0';
+            // Post to backend API
+            fetch(`${API_URL}/vendors`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    name,
+                    workType,
+                    agreedAmount,
+                    initialPayment,
+                    paymentMethod
+                })
+            })
+            .then(res => res.json())
+            .then(data => {
+                // Refresh vendors from Google Sheets
+                fetchVendors();
+                // Clear form
+                document.getElementById('vendorName').value = '';
+                document.getElementById('agreedAmount').value = '';
+                document.getElementById('initialPayment').value = '0';
+            })
+            .catch(error => {
+                console.error('Error adding vendor:', error);
+                alert('Failed to add vendor');
+            });
         }
 
         function addPayment(vendorId) {
@@ -841,24 +780,44 @@
                 return;
             }
 
-            const vendor = vendors.find(v => v.id === vendorId);
-            if (vendor) {
-                vendor.paidAmount += amount;
-                vendor.payments.push({ amount: amount, date: new Date().toISOString(), method: method });
-                saveData();
-                createDailyBackup();
-                renderVendors();
-                updateSummary();
-            }
+            // Post payment to backend API
+            fetch(`${API_URL}/vendors/${vendorId}/payment`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    vendorId,
+                    amount,
+                    method
+                })
+            })
+            .then(res => res.json())
+            .then(data => {
+                // Refresh vendors from Google Sheets
+                fetchVendors();
+                // Clear input
+                document.getElementById(`payment-${vendorId}`).value = '';
+            })
+            .catch(error => {
+                console.error('Error adding payment:', error);
+                alert('Failed to add payment');
+            });
         }
 
         function deleteVendor(vendorId) {
             if (confirm('Are you sure you want to delete this vendor?')) {
-                vendors = vendors.filter(v => v.id !== vendorId);
-                saveData();
-                createDailyBackup();
-                renderVendors();
-                updateSummary();
+                fetch(`${API_URL}/vendors/${vendorId}`, {
+                    method: 'DELETE',
+                    headers: { 'Content-Type': 'application/json' }
+                })
+                .then(res => res.json())
+                .then(data => {
+                    // Refresh vendors from Google Sheets
+                    fetchVendors();
+                })
+                .catch(error => {
+                    console.error('Error deleting vendor:', error);
+                    alert('Failed to delete vendor');
+                });
             }
         }
 
@@ -890,16 +849,25 @@
                 return;
             }
 
-            vendor.name = newName;
-            vendor.workType = newWorkType;
-            vendor.agreedAmount = newAgreedAmount;
-            vendor.editing = false;
-            delete vendor.originalValues;
-
-            saveData();
-            createDailyBackup();
-            renderVendors();
-            updateSummary();
+            // PUT to backend API
+            fetch(`${API_URL}/vendors/${vendorId}`, {
+                method: 'PUT',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    name: newName,
+                    workType: newWorkType,
+                    agreedAmount: newAgreedAmount
+                })
+            })
+            .then(res => res.json())
+            .then(data => {
+                // Refresh vendors from Google Sheets
+                fetchVendors();
+            })
+            .catch(error => {
+                console.error('Error updating vendor:', error);
+                alert('Failed to update vendor');
+            });
         }
 
         function cancelEdit(vendorId) {
